k8s/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: yelhadad/shopping-client
          #resources:
          #    requests:
          #     memory: "512Mi"
          # cpu: "100m"
          # limits:
          # memory: "800Mi"
          #cpu: "200m"
          ports:
            - name: react
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: react
      protocol: TCP
      port: 3000
      targetPort: 3000
