k8s/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping
  template:
    metadata:
      labels:
        app: shopping
    spec:
      containers:
        - name: shopping-app
          image: yelhadad/shopping
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          ports:
            - name: flask
              containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-srv
spec:
  selector:
    app: shopping
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
